Fixed the wrap box

--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ iframe {
 }
 
 .wrap-table100 {
-  width: 1000px;
+  width: 100%;
   /*border: black solid thin;*/
 }
 
